<resources>
    <!--    Application name-->
    <string name="app_name">Covid-19 Patient Tracker</string>

    <!--    Application labels for main activity-->
    <string name="lbl_patients_reg">Register</string>
    <string name="lbl_rss">Virus News</string>
    <string name="lbl_patients">Registered Patients</string>
    <string name="lbl_maps">Maps</string>

    <!--    Application labels for listItem/CardView-->
    <string name="lbl_name">Name</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_phone">Phone Number</string>
    <string name="lbl_prof">Health Card Number</string>
    <string name="lbl_corona">Corona???</string>
    <string name="lbl_ageGroup">Age Group</string>
    <string name="lbl_gender">Gender</string>

    <!--    Application Labels/Hints for Update and registration activities-->
    <string name="lbl_child">Child</string>
    <string name="lbl_adult">Adult</string>
    <string name="lbl_senior">Senior</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_update">Update</string>

    <!--    Spinner Labels-->
    <array name="genderOptions">
        <item>Male</item>
        <item>Female</item>
    </array>

    <!--    Application TextON/TextOFF for Switch-->
    <string name="lbl_corona_pos">Corona: Positive</string>
    <string name="lbl_corona_neg">Corona: Negative</string>

    <!--    Application Labels for PopupMenu-->
    <string name="lbl_del">Delete</string>
    <string name="lbl_up">Update</string>

    <!-- CoronaNews values -->
    <string name="lbl_corona_news">COVID-19 News</string>

    <!-- Notification Service -->
    <string name="channel_name">COVID APP CHANNEL</string>
    <string name="channel_description">Shows notifications</string>
        <!-- Random Notification Messages -->
    <array name="notifyContent">
        <item>Oh god COVID just killed 90001 people</item>
        <item>There is nothing to worry about!</item>
        <item>You\'ve got M A I L</item>
        <item>RIP Grandma</item>
        <item>Toilet paper stocks hit all time high</item>
    </array>
    <string name="notifyTitle">COVID-19 NEWS</string>
</resources>

