<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_secondary">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/lbl_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        app:backgroundTint="@color/colorAccent"/>

    <EditText
        android:id="@+id/et_address"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/lbl_address"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        app:backgroundTint="@color/colorAccent"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/lbl_phone"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_address"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        app:backgroundTint="@color/colorAccent"/>

    <EditText
        android:id="@+id/et_pro"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lbl_prof"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        app:backgroundTint="@color/colorAccent"/>

    <Spinner
        android:id="@+id/sp_gender"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pro"
        android:entries="@array/genderOptions"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <Switch
        android:id="@+id/sw_corona"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_gender"
        android:text="@string/lbl_corona"
        android:checked="false"
        android:textOff="@string/lbl_corona_neg"
        android:textOn="@string/lbl_corona_pos"
        android:textColor="@android:color/white" />

    <RadioGroup
        android:id="@+id/rg_ageRange"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/sw_corona"
        android:textColor="@android:color/white">

        <RadioButton
            android:id="@+id/childRadioButton"
            android:layout_width="100dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_child"
            android:textColor="@android:color/white"
            android:buttonTint="@color/colorAccent"/>

        <RadioButton
            android:id="@+id/adultRadioButton"
            android:layout_width="100dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_adult"
            android:textColor="@android:color/white"
            android:buttonTint="@color/colorAccent"/>

        <RadioButton
            android:id="@+id/seniorRadioButton"
            android:layout_width="100dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_senior"
            android:textColor="@android:color/white"
            android:buttonTint="@color/colorAccent"/>
    </RadioGroup>



    <Button
        android:id="@+id/bt_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/lbl_register"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_ageRange" />

</androidx.constraintlayout.widget.ConstraintLayout>